--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.linting.pylintEnabled": false,
-    "python.pythonPath": "/usr/local/bin/python3"
+    "python.pythonPath": "/home/codeaayu/Desktop/hackabit/venv/bin/python"
 }
